0.1. Отладка лямбда в IDEA [#310656]